--- a/Reen/src/userinterface/RespondersRole/RespondersProfile.form
+++ b/Reen/src/userinterface/RespondersRole/RespondersProfile.form
@@ -61,7 +61,7 @@
                           </Group>
                           <EmptySpace min="-2" pref="160" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="txtUser" alignment="0" pref="186" max="32767" attributes="0"/>
+                              <Component id="txtUsername" alignment="0" pref="186" max="32767" attributes="0"/>
                               <Component id="txtFirstName" alignment="0" max="32767" attributes="0"/>
                               <Component id="txtLastName" alignment="0" max="32767" attributes="0"/>
                               <Component id="txtEmail" alignment="0" max="32767" attributes="0"/>
@@ -97,7 +97,7 @@
                                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                                   <Component id="jLabel1" min="-2" pref="38" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="86" max="-2" attributes="0"/>
-                                  <Component id="txtUser" min="-2" max="-2" attributes="0"/>
+                                  <Component id="txtUsername" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
@@ -163,7 +163,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBrowseActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="txtUser">
+        <Component class="javax.swing.JTextField" name="txtUsername">
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel17">
           <Properties>
